# NewType

./: .gitignore  CMakeLists.txt  README.md  clang-format-all
.github/workflows/: cmake-single-platform.yml
examples/: CMakeLists.txt  common_type.cpp
src/: float.hpp  integer.hpp
tests/: CMakeLists.txt  float8.cpp  float8_test_data.hpp
